--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,22 @@
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 @import "./quiz";
 @import "./highScrore";
 
 :root {
-  background-color: #ecf5ff;
   font-size: 62.5%;
+  background-color: #485461;
+  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  // font-family: 'Poppins', sans-serif;
+  font-family: 'VT323', monospace;
   margin: 0;
   padding: 0;
-  color: #333;
+  color: #08FF08;
 }
 
 h1,
@@ -23,7 +28,6 @@ h4 {
 
 h1 {
   font-size: 5.4rem;
-  color: #56a5eb;
   margin-bottom: 5rem;
 }
 
@@ -84,22 +88,24 @@ h3 {
 
 /* BUTTONS */
 .btn {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   padding: 1rem 0;
   width: 20rem;
   text-align: center;
-  border: 0.1rem solid #56a5eb;
-  margin-bottom: 1rem;
+  border: 0.1rem solid #08FF08;
+  border-radius: 1.5rem;
+  margin-bottom: 2rem;
   text-decoration: none;
-  color: #56a5eb;
-  background-color: white;
+  background-color: #28313b;
 }
 
 .btn:hover {
   cursor: pointer;
-  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  box-shadow: 0 0.7rem 1.4rem 0 rgba(8,255,8, 0.5);
   transform: translateY(-0.1rem);
   transition: transform 150ms;
+  border: 0.2rem solid #08FF08;
+  background-color: #485461;
 }
 
 .btn[disabled]:hover {
@@ -117,14 +123,17 @@ form {
 }
 
 input {
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   width: 25rem;
   padding: 1.5rem;
   font-size: 1.8rem;
   border: none;
-  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  background-color: #28313b;
+  border-radius: 1rem;
+  border: 0.2rem solid #08FF08;
+  box-shadow: 0 0.7rem 1.4rem 0 rgba(8,255,8, 0.5);
 }
 
 input::placeholder {
-  color: #aaa;
+  color: #08FF08;
 }
