--- a/styles/_quiz.scss
+++ b/styles/_quiz.scss
@@ -23,6 +23,12 @@
     border-radius: 2rem 0 0 2rem;
   }
   
+  #game{
+    background: black;
+    border-style:solid;
+    padding:50px;
+    border-radius: 10px;
+  }
   .choice-text {
     padding: 1.5rem;
     width: 100%; 
