--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,12 @@
   margin: 0;
   padding: 0;
   color: #08FF08;
+  
+}
+body{
+  background: url(/assets/Background_Stars.jpg);
+  width: 100%;
+  height: 100vh;
 }
 
 h1,
@@ -59,6 +65,12 @@ h3 {
   max-width: 80rem;
   margin: 0 auto;
   padding: 2rem;
+  
+}
+#end{
+  border-style: solid;
+  border-radius: 25px;
+  background-color: black;
 }
 
 .container > * {
@@ -91,6 +103,7 @@ h3 {
 .btn {
   font-size: 1.7rem;
   padding: 1rem 0;
+  margin:2rem;
   width: 20rem;
   text-align: center;
   border: 0.1rem solid #08FF08;
@@ -105,7 +118,6 @@ h3 {
   box-shadow: 0 0.7rem 1.4rem 0 rgba(8,255,8, 0.5);
   transform: translateY(-0.1rem);
   transition: transform 150ms;
-  border: 0.2rem solid #08FF08;
   background-color: #485461;
 }
 
@@ -137,4 +149,136 @@ input {
 
 input::placeholder {
   color: #08FF08;
+}
+
+
+
+//Earth starts design
+#box__planet{
+  width: 1000px;
+  height: 1000px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  overflow: hidden;
+  border-radius: 50%;
+  background: #e0e0e0;
+  box-shadow:  -5px -5px 100px #5a5a5a,
+           5px 5px 50px #ffffff;
+           
+}
+#shadow_planet{
+  width: 1000px;
+  height: 1000px;
+  margin-top:-1000px;
+  position: relative;
+  border-radius: 50%;
+  box-shadow: inset 1px 0px 100px 50px #000;
+  overflow: hidden;
+  
+}
+#box__planet img {
+  margin-top: 0;
+  padding-top: 0;
+  height: 99.5%;
+  animation:spin 30s linear infinite;
+  
+}
+@keyframes spin{
+  0%{
+      margin-left: -800px;
+  }
+  100%{
+      margin-left: 0px;
+  }
+}
+
+// Here starts the main banner
+
+.questions__container{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+ width: 50rem;
+ height: 70rem;
+  background-color: white;
+  border-radius: 20px;
+  background: black;
+  border-style: solid ;
+ box-shadow:  -5px -5px 50px black,
+        5px 5px 50px black;
+        
+
+
+
+.globe__quiz__image{
+ 
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width:20rem;
+ padding-top:10px;
+ padding-bottom: 12px;
+ filter: drop-shadow(0 10px 10px black);
+
+}
+.title__questions1{
+ 
+
+ text-align: center;
+ font-size: 6rem;
+ font-weight: 900;
+ 
+ text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+ 
+}
+.title__questions{
+ 
+ 
+ text-align: center;
+ font-size: 3rem;
+ font-weight: 900;
+ 
+ text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+ padding-bottom: 10px;
+}
+
+
+#input{
+ text-align: center;
+ width: 25rem;
+ height: 2.5rem;
+ border-radius: 25px;
+ font-family: 'Red Hat Display', sans-serif ;
+ font-size: 1.5rem;
+ font-weight: 100;
+ color: #5a5a5a;
+ display:block;
+ margin-top:50px;
+ margin-left:auto;
+ margin-right:auto;
+}
+#input:hover{
+ box-shadow:  1px 1px 5px hsl(245, 75%, 52%),
+      0px 0px 5px hsl(245, 75%, 52%);
+}
+form button{
+     background-color:hsl(245, 75%, 52%);
+     width: 10rem;
+     display: block;margin-left: auto;
+     margin-right: auto;
+     margin-left: auto;
+     height:3rem;
+     border-radius: 10px;
+     text-align: center;    
+     color:white;
+     font-weight: 800;
+     font-family: 'Red Hat Display', sans-serif ;
+     margin-top:50px;
+     box-shadow:  1px 1px 5px hsl(245, 75%, 52%),
+      0px 0px 5px hsl(245, 75%, 52%);
+}
 }
