--- a/styles/_reviewsPage.scss
+++ b/styles/_reviewsPage.scss
@@ -1,7 +1,13 @@
+
 .reviews-main-page {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+#review{
+  width: 100%;
+  height:100%;
+  text-align:center;
 }
 
 .reviews-top-container {
@@ -16,12 +22,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 40vh;
 }
 
 #listOfReviews {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 100%;
   align-items: center;
   justify-content: space-evenly;
@@ -33,14 +39,18 @@
 
 .reviews-card {
   border: 1px solid #08FF08;
-  font-size: 2rem;
-  
-  width: 30%;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 2rem; 
+  text-align: center;
   list-style-type: none;
   padding: 1rem;
   margin: 1rem;
+  height:20rem;
   border-radius: 1rem;
+  background: linear-gradient(61deg, rgba(0,0,0,1) 0%, rgba(3,3,36,1) 100%);
+
 
   p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
