--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,6 +146,12 @@
           align-items: center;
 }
 
+#review {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
 .reviews-top-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -174,18 +180,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 40vh;
 }
 
 #listOfReviews {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
   width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -201,15 +203,24 @@
 
 .reviews-card {
   border: 1px solid #08FF08;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 2rem;
-  width: 30%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
   list-style-type: none;
   padding: 1rem;
   margin: 1rem;
+  height: 20rem;
   border-radius: 1rem;
+  background: linear-gradient(61deg, black 0%, #030324 100%);
 }
 
 .reviews-card p {
