--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,10 +20,14 @@
   color: #08FF08;
   
 }
+
 body{
-  background: url(/assets/Background_Stars.jpg);
-  width: 100%;
+  background: url('../assets/Background_Stars.jpg');
+  width: 100vw;
   height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1,
